--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "dotenv": "^16.0.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "ts-loader": "^9.3.1"
   }
 }
